<resources>
  <string name="no_data">No data at the moment.</string>
  <string name="tab_here_to_refresh">Tab here to refresh.</string>
  <string name="reschedule_another_time">Reschedule Another Time</string>
  <string name="reschedule_another_date">Reschedule Another Date</string>
  <string name="other_reason_hint">Reason</string>
  <string name="bt_submit">SUBMIT</string>
  <string name="title_reject_dialog">Are you sure you want to reject?</string>
  <string name="msg_reject_dialog">Please state your reason:</string>
  <string name="title_thank_you">Thank You</string>
  <string name="please_rate_our_service">Please rate our service:\t</string>
  <string name="review_et_hint">Let us know what you think?</string>
  <string name="bt_ok">OK</string>
  <string name="other_reason">Other Reason</string>
  <string name="title_fb">Facebook</string>
  <string name="title_whatsapp">WhatsApp</string>
  <string name="title_skype">Skype</string>
  <string name="ask_a_question">Ask a Question</string>
  <string name="enter_your_question_hint">Enter your question…</string>
  <string name="bt_confirm">CONFIRM</string>
  <string name="enter_your_report_hint">Enter your report</string>
  <string name="title_report">Report</string>
  <string name="enter_your_answer_hint">Enter your answer...</string>
  <string name="successfully">Successfully</string>
  <string name="enter_redemption_code">Enter redemption code</string>
  <string name="enter_code">Enter code</string>
  <string name="confirm_purchase">Confirm Purchase</string>
  <string name="test_send_gift">Please confirm your Teddy Bear (8 units) purchase of 0$</string>
  <string name="cancellation"><u> <![CDATA[Cancellation & Refund Policy]]> </u></string>
  <string name="gift_deliver">Gift Delivered</string>
  <string name="enter_user_name_dialog">Enter StageMetro username to send your gift</string>
  <string name="enter_stagemetro_hint">Enter StageMetro username</string>
  <string name="register_successful">Registration Successful!</string>
  <string name="here_is_your_stage_id">Here is your stage ID:</string>
  <string name="menu_service">MENU SERVICE</string>
  <string name="event_service">EVENT SERVICE</string>
  <string name="cancel_choose">CANCEL</string>
  <string name="choose_service_type">Choose Service Type</string>
  <string name="enter_your_reason">Enter your reason...</string>
  <string name="the_beaumont">The Beaumont</string>
  <string name="_145_deveonshire_road">145 Deveonshire Road</string>
  <string name="agent_elaine_onge">Agent: Elaine Onge</string>
  <string name="s_1_200_000">S$ 1,200,000</string>
  <string name="_807_sqft">807 sqft</string>
  <string name="owner_to_sign">Owner To Sign</string>

  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="register">Register</string>
  <string name="studio">Studio</string>
  <string name="dialog_cancel">Cancel</string>
  <string name="date_hdb_otp_timestamp"> MON 30 May 2017</string>
  <string name="lucy_wong">Lucy Wong</string>
  <string name="owner">Owner</string>
  <string name="floor_size_landed">Floor Size(Landed)</string>
  <string name="floor_size">Floor Size (Built Up)</string>
  <string name="sqft">sqft</string>
  <string name="sqm">sqm</string>
</resources>
