<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Dialog.Layout">

  <LinearLayout
      android:background="@drawable/bg_dialog_content"
      android:orientation="vertical"
      android:layout_centerInParent="true"
      style="@style/Dialog.Content">

    <font.app.gem.widget.ui.CFTextView
        android:id="@+id/dialog_title_tv"
        android:text="@string/enter_user_name_dialog"
        style="@style/Dialog.Text.Title"/>

    <AutoCompleteTextView
        android:id="@+id/dialog_user_et"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:dropDownWidth="match_parent"
        android:gravity="top"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:layout_marginTop="@dimen/dialog_content_margin"
        android:hint="@string/enter_stagemetro_hint"
        style="@style/Dialog.EditText"/>

    <font.app.gem.widget.ui.CFTextView
        android:id="@+id/dialog_submit_tv"
        android:text="@string/bt_confirm"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        style="@style/ButtonBase.Round.Pink"/>

  </LinearLayout>

  <ImageView
      android:id="@+id/dialog_close_bt"
      style="@style/Dialog.Icon.Close"
      android:layout_gravity="center"/>

</RelativeLayout>