<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Dialog.Layout">

  <LinearLayout
      android:background="@drawable/bg_dialog_content"
      android:layout_centerInParent="true"
      android:orientation="vertical"
      style="@style/Dialog.Content">

    <font.app.gem.widget.ui.CFTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/confirm_purchase_tv"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:text="@string/register_successful"/>

    <font.app.gem.widget.ui.CFTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/here_is_your_stage_id"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/dialog_text_color"/>

    <font.app.gem.widget.ui.CFTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:id="@+id/user_stage_id_tv"
        android:textColor="@color/dialog_text_color"/>

    <font.app.gem.widget.ui.CFTextView
        android:id="@+id/dialog_submit_tv"
        android:text="@string/bt_ok"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:paddingLeft="65dp"
        android:paddingRight="65dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="@dimen/padding_large"
        style="@style/ButtonBase.Round.Pink"/>

  </LinearLayout>

  <ImageView
      android:id="@+id/dialog_close_bt"
      style="@style/Dialog.Icon.Close"
      android:visibility="gone"
      android:layout_gravity="center"/>

</RelativeLayout>